--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <p>This has not changed the demand for parents looking to adopt, however. Of those 699 children available to be adopted, nearly all of them will find homes with new families. The ratio of parents looking to adopt to children available to be adopted remains the same, however. Trump-era laws have made it so that less couples are able to adopt. In 2019, a rule proposed by former President Trump, would make it so that any organization could discriminate against LGBTQIA+ couples, preventing them from adopting children. This has come right on the heels of the implementation of the <a href="https://www.ncsl.org/research/human-services/family-first-prevention-services-act-ffpsa.aspx”>Family First Prevention Services Act</a>, which had a goal of overhauling the foster care system to implement services that might help keep foster children with their natural parents, making even less children available to prospective adoptive parents</P>
 <p>The adoption system in the US remains largely at the mercy of each state’s cultural perception of adoption and alternative family structures. Abortion bans will likely put more infants into the foster care system. However, if these same states are preventing gay couples from adopting, by allowing agencies and Catholic charities to discriminate against them which prevents them from adopting, where is it that the scales will tip, and who will be on the loosing side of this ratio?</P>
 <h4>Source List:</h4>
-<p>https://www.saccounty.net/news/latest-news/Pages/Adoption-Event-Joy-But-More-Youth-Need-Families.aspx</P>
-<p>https://ocfs.ny.gov/main/reports/maps/defaultAgg.asp</P>
+<p>Photo: https://www.saccounty.net/news/latest-news/Pages/Adoption-Event-Joy-But-More-Youth-Need-Families.aspx</P>
+<p>NYS Adoption Data: https://ocfs.ny.gov/main/reports/maps/defaultAgg.asp</P>
 <P>Icon 1: Kids by Lars Meiertoberens from the Noun Project</P>
 <P>Icon 2: Birth Certificate by Silviu Ojog from the Noun Project</p>
 <P>Icon 3: Adoption by Luis Prado from the Noun Project</p>
