--- a/index.html
+++ b/index.html
@@ -1,53 +1,89 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
-    <title>How Agencies Use Data to Mislead Adoptive Parents</title>
+    <title>Busting the Myth Behind Adoption Availability</title>
     <link rel="stylesheet" href="styles.css">
   </head>
+
   <body>
     <div class="main">
-      <h1><center>Busting the Myth Behind Adoption Availability</center></h1>
+      <h1>
+        <center>Busting the Myth Behind Adoption Availability</center>
+      </h1>
       <figure>
-        <img src="images/HeaderImage.jpg" alt="Sign for National Adoption Day next to a child wearing a shirt that says Peace Out Foster Care"><figcaption>​Adoption Day event in Sacramento in 2019.​ Credit: Sacramento County News</figcaption>
+        <img src="images/HeaderImage.jpg" alt="Sign for National Adoption Day next to a child wearing a shirt that says Peace Out Foster Care">
+        <figcaption>​Adoption Day event in Sacramento in 2019.​ Credit: Sacramento County News</figcaption>
       </figure>
-      <p>November is National Adoption Month which was intended to raise awareness of children in the foster care system who are still needing homes. The troubling fact of the matter is, that this is mostly pushed out by adoption agencies, who have a fair amount of financial stake in parents looking to adopt. Adoption is an 8 billion dollar industry, costing both adoptive parents and natural mothers alike, while agencies and lawyers pocket the cash. What's more, the idea that "so many children need to be adopted" is rather distorted.</p>
-      <p>“There are definitely more children waiting for a forever home in foster care than adoptive couples looking to adopt the older children,” says Michelle Downard, who is a counselor for natural mothers at a private adoption agency, American Adoptions. She says what is different about private adoptions, rather than working through the state, is that birth mothers come to them having already decided that placing their child up for adoption is what they want, and that they only place children under the age of four. The upside of this, is that this tends to take less time as it is more of a match-making process with readily available parents. However, it is much more costly to the adoptive parents – incurring upwards of <a href= https://www.adoptuskids.org/adoption-and-foster-care/overview/what-does-it-cost>$40,000</a> in everything from legal fees to medical care for the natural mother. What is thought of as the more affordable route, is to go through the foster care system. However, if the potential parent is looking to adopt an infant, this can take years to arrange.</p>
-      <div class="icon"</div>
-      <article>
-        <!-- Begin icon grid -->
-        <div="icon-grid">
+      <p>November is National Adoption Month which was intended to raise awareness of children in the foster care system who are still needing homes. The troubling fact of the matter is, that this is mostly pushed out by adoption agencies, who have a
+        fair amount of financial stake in parents looking to adopt. Adoption is an 8 billion dollar industry, costing both adoptive parents and natural mothers alike, while agencies and lawyers pocket the cash. What's more, the idea that "so many
+        children need to be adopted" is rather distorted.</p>
+      <p>“There are definitely more children waiting for a forever home in foster care than adoptive couples looking to adopt the older children,” says Michelle Downard, who is a counselor for natural mothers at a private adoption agency, American
+        Adoptions. She says what is different about private adoptions, rather than working through the state, is that birth mothers come to them having already decided that placing their child up for adoption is what they want, and that they only
+        place children under the age of four. The upside of this, is that this tends to take less time as it is more of a match-making process with readily available parents. However, it is much more costly to the adoptive parents – incurring upwards
+        of <a href=https://www.adoptuskids.org/adoption-and-foster-care/overview/what-does-it-cost>$40,000</a> in everything from legal fees to medical care for the natural mother. What is thought of as the more affordable route, is to go through the
+        foster care system. However, if the potential parent is looking to adopt an infant, this can take years to arrange.</p>
+      <div class="icon" </div>
+        <article>
+          <!-- Begin icon grid -->
+          <div="icon-grid">
 
-          <div class="">
-            <div class="flex">
-              <div class="half">
-              <h3>Children in Foster Care (NY, 2020)</h3>
-              <img src="images/icon_project_1_V02.png" alt="Graphic of a boy and girl standing next to each other.">
-                <h1><center>15,016</center></h1>
+            <div>
+              <div class="flex">
+                <div class="half">
+                  <h3>Children in Foster Care (NY, 2020)</h3>
+                  <img src="images/icon_project_1_V02.png" alt="Graphic of a boy and girl standing next to each other.">
+                </div>
+                <div class="half">
+                  <h3>Children in Foster Care Who are Freed for Adoption (NY, 2020)</h3>
+                  <img src="images/icon_project_2_V02.png" alt="Graphic of a birth certificate.">
+                </div>
+                <div class="half">
+                  <h3>Children from Foster Care Who Were Adopted</h3>
+                  <img src="images/icon_project_3_V02.png" alt="Graphic of a baby being handed over to their new parents.">
+                </div>
+                <div class="half">
+                  <h1>
+                    <center>15,016</center>
+                  </h1>
+                </div>
+                <div class="half">
+                  <h1>
+                    <center>669</center>
+                  </h1>
+                </div>
+                <div class="half">
+                  <h1>
+                    <center>660</center>
+                  </h1>
+                </div>
+
+
               </div>
-              <div class="half">
-              <h3>Children in Foster Care Who are Freed for Adoption (NY, 2020)</h3>
-              <img src="images/icon_project_2_V04.png" alt="Graphic of a birth certificate.">
-                <h1><center>699</center></h1>
-              </div>
-              <div class="half">
-              <h3>Children from Foster Care Who Were Adopted</h3>
-              <img src="images/icon_project_3_V02.png" alt="Graphic of a baby being handed over to their new parents.">
-                <h1><center>660</center></h1>
-              </div>
+              <p>As of the end of 2020, there were 15,016 children in foster care in the state of New York, which has hovered around this number since 2019. While this might seem like a large enough number on average, children are in foster care for
+                20 months, according to the Adoption and Foster Care and Analysis and Reporting System (AFCARS). In most cases, children in the state system were taken from their natural parents involuntarily because they were found to be unfit
+                parents: financial struggles, drugs, and domestic abuse are among many of these reasons. In New York State, parents have <a href="https://www.childwelfare.gov/pubPDFs/reunification.pdf">15 months</a> to change their circumstances to
+                be able to bring their children home. Afterwards, child welfare is required by law to ask the court to take away parental rights, and only then are these children released to be available to be adoption. In addition, for children that
+                are 14 or older, the state of New York requires the consent of the child in order for them to become available to be adopted as well. This can explain why of the 15k children in the foster care system, only 699 of them are available
+                to be adopted.</p>
+              <p>This has not changed the demand for parents looking to adopt, however. Of those 699 children available to be adopted, nearly all of them will find homes with new families. The ratio of parents looking to adopt to children available
+                to be adopted remains the same, however. Trump-era laws have made it so that less couples are able to adopt. In 2019, a rule proposed by former President Trump, would make it so that any organization could discriminate against
+                LGBTQIA+ couples, preventing them from adopting children. This has come right on the heels of the implementation of the <a href="https://www.ncsl.org/research/human-services/family-first-prevention-services-act-ffpsa.aspx"> Family
+                  First Prevention Services Act</a>, which had a goal of overhauling the foster care system to implement services that might help
+                keep foster children with their natural parents, making even less children available to prospective adoptive parents</p>
+              <p>The adoption system in the US remains largely at the mercy of each state’s cultural perception of adoption and alternative family structures. Abortion bans will likely put more infants into the foster care system. However, if these
+                same states are preventing gay couples from adopting, by allowing agencies and Catholic charities to discriminate against them which prevents them from adopting, where is it that the scales will tip, and who will be on the loosing
+                side of this ratio?</P>
+              <h4>Source List:</h4>
+              <p>Photo: https://www.saccounty.net/news/latest-news/Pages/Adoption-Event-Joy-But-More-Youth-Need-Families.aspx</P>
+              <p>NYS Adoption Data: https://ocfs.ny.gov/main/reports/maps/defaultAgg.asp</P>
+              <P>Icon 1: Kids by Lars Meiertoberens from the Noun Project</P>
+              <P>Icon 2: Birth Certificate by Silviu Ojog from the Noun Project</p>
+              <P>Icon 3: Adoption by Luis Prado from the Noun Project</p>
             </div>
-<p>As of the end of 2020, there were 15,016 children in foster care in the state of New York, which has hovered around this number since 2019. While this might seem like a large enough number on average, children are in foster care for 20 months, according to the Adoption and Foster Care and Analysis and Reporting System (AFCARS). In most cases, children in the state system were taken from their natural parents involuntarily because they were found to be unfit parents: financial struggles, drugs, and domestic abuse are among many of these reasons. In New York State, parents have <a href="https://www.childwelfare.gov/pubPDFs/reunification.pdf”>15 months</a> to change their circumstances to be able to bring their children home. Afterwards, child welfare is required by law to ask the court to take away parental rights, and only then are these children released to be available to be adoption. In addition, for children that are 14 or older, the state of New York requires the consent of the child in order for them to become available to be adopted as well. This can explain why of the 15k children in the foster care system, only 699 of them are available to be adopted.</p>
-
-<p>This has not changed the demand for parents looking to adopt, however. Of those 699 children available to be adopted, nearly all of them will find homes with new families. The ratio of parents looking to adopt to children available to be adopted remains the same, however. Trump-era laws have made it so that less couples are able to adopt. In 2019, a rule proposed by former President Trump, would make it so that any organization could discriminate against LGBTQIA+ couples, preventing them from adopting children. This has come right on the heels of the implementation of the <a href="https://www.ncsl.org/research/human-services/family-first-prevention-services-act-ffpsa.aspx”>Family First Prevention Services Act</a>, which had a goal of overhauling the foster care system to implement services that might help keep foster children with their natural parents, making even less children available to prospective adoptive parents</P>
-<p>The adoption system in the US remains largely at the mercy of each state’s cultural perception of adoption and alternative family structures. Abortion bans will likely put more infants into the foster care system. However, if these same states are preventing gay couples from adopting, by allowing agencies and Catholic charities to discriminate against them which prevents them from adopting, where is it that the scales will tip, and who will be on the loosing side of this ratio?</P>
-<h4>Source List:</h4>
-<p>Photo: https://www.saccounty.net/news/latest-news/Pages/Adoption-Event-Joy-But-More-Youth-Need-Families.aspx</P>
-<p>NYS Adoption Data: https://ocfs.ny.gov/main/reports/maps/defaultAgg.asp</P>
-<P>Icon 1: Kids by Lars Meiertoberens from the Noun Project</P>
-<P>Icon 2: Birth Certificate by Silviu Ojog from the Noun Project</p>
-<P>Icon 3: Adoption by Luis Prado from the Noun Project</p>
-          </div>
-      </article>
-    </div>
+        </article>
+      </div>
   </body>
+
 </html>
